test check added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer>
 
-        &#169; This Calculator belongs to ErikZ_58
+        &#169; This Calculator belongs to ErikZ_58 Test
     </footer>
 
 </html>
