--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select> <br/>
-       
-        Interest : <span id="result"></span> <br>
 
         <button onclick="compute()">Compute Interest</button>
         <span id="result">
@@ -36,7 +34,7 @@
 
     <footer>
 
-        &#169; This Calculator belongs to ErikZ_58 Test
+        &#169; This Calculator belongs to ErikZ_58
     </footer>
 
 </html>
