--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
+        <label>Amount</label> <input type="number"  id="principal">  <br/>
 
-        Interest Rate <input type="range" id="rate" onchange="updateRate()" min="1" max="20" step="0.25" value="10.25"><span id="rate_val">10.25%</span><br/>
+        <label>Interest Rate</label> <input type="range" id="rate" onchange="updateRate()" min="1" max="20" step="0.25" value="10.25"><span id="rate_val">10.25%</span><br/>
        
-        No. of Years <select id="years">
+        <label>No. of Years</label> <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
