--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-    <title>"Simple Interest Calculator"</title>
+    <title>"Web App - Simple Interest Calculator"</title>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -10,8 +10,10 @@
         <h1>Simple Interest Calculator</h1>
 
         <label>Amount</label> <input type="number"  id="principal">  <br/>
+        <br/>
 
-        <label>Interest Rate</label> <input type="range" id="rate" onchange="updateRate()" min="1" max="20" step="0.25" value="10.25"><span id="rate_val">10.25%</span><br/>
+        <label>Interest Rate</label> <input type="range" id="rate" onchange="updateRate()" min="1" max="20" step="0.25" value="10.25"><span id="rate_val">10.25</span>%<br/>
+        <br/>
        
         <label>No. of Years</label> <select id="years">
             <option value="1">1</option>
@@ -33,11 +35,10 @@
         <span id="result">
 
         </span>
+        
+         <footer>&#169; This Calculator belongs to ErikZ_58</footer>
     </div>
 
-    <footer>
-
-        &#169; This Calculator belongs to ErikZ_58
-    </footer>
+   
 
 </html>
